# agent-policies-server

./: .dockerignore  .gitignore  .mutmut-config.toml  .vale.ini  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: writing-rego-policies.md
examples/basic-server/: main.py
policies/demo_bundles/: bundle_selection.rego
policies/demo_flags/: cooldown.rego  test_tracking.rego  time_expiration.rego  workflow.rego
policies/devleaps/: skill_git.rego  skill_python.rego  (+3 more)
src/: bundles_impl.py  heuristics.py  main.py  utils.py
test/: test_common_policies.py  test_middleware.py
tests/: __init__.py  conftest.py  helpers.py  test_absolute_path_executables.py  test_backtick_quoting.py  test_cloud.py  test_comment_overlap_guidance.py  test_comment_ratio_guidance.py  test_commented_code_guidance.py  test_common_policies.py  test_docker_build.py  test_full_pipeline.py  test_gh_api.py  test_git.py  test_git_add_files.py  test_git_commit_amend.py  test_git_commit_m_flag.py  test_git_mv.py  test_git_push_force.py  test_git_rm.py  test_guidance_activation.py  test_legacy_deprecated_keyword.py  test_localhost_url_attacks.py  test_mid_code_import_guidance.py  test_mid_code_import_method_level.py  test_middleware.py  test_pytest_uv_requirement.py  test_python_guidance.py  test_readme_license_guidance.py  test_rego_helpers.py  test_rm_trash_guidance.py  test_sqlite3_allow.py  test_tmp_cat_block.py  test_tool_use_guidances.py  test_touch_allow.py  test_trash.py  test_universal.py  test_uv.py  test_uv_add_validate.py  test_uv_pip_install_guidance.py  (+1 more)
(+320 files in other folders)
