[project]
name = "re-internal-agent-policies"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "bashlex>=0.18",
    "devleaps-agent-policies",
    "httpx>=0.27.0",
    "regopy>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.4.2",
]
