[project]
name = "re-internal-agent-policies"
version = "1.0.0"
requires-python = ">=3.9"

dependencies = [
    "bashlex>=0.18",
    "devleaps-agent-policies[server]",
    "httpx>=0.27.0",
]

[project.scripts]
devleaps-policy-server = "src.main:main"

[tool.uv.sources]
devleaps-agent-policies = { path = "../agent-policies", editable = true }

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.4.2",
]
