[project]
name = "re-internal-agent-policies"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "bashlex>=0.18",
    "fastapi==0.118.0",
    "httpx>=0.27.0",
    "pydantic==2.12.5",
    "regopy>=1.2.0",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[tool.ruff]
exclude = ["mutants"]

[tool.mypy]
exclude = ["mutants"]
